--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -18,8 +18,8 @@ jobs:
     - uses: actions/checkout@v3
     - name: Install Proto
       run: |
-        apt update && apt upgrade -y
-        apt install -y protobuf-compiler libprotobuf-dev
+        sudo apt update && apt upgrade -y
+        sudo apt install -y protobuf-compiler libprotobuf-dev
     - name: Build
       run: cargo build --verbose
     - name: Run tests
