--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -18,7 +18,7 @@ jobs:
     - uses: actions/checkout@v3
     - name: Install Proto
       run: |
-        sudo apt update && apt upgrade -y
+        sudo apt update && sudo apt upgrade -y
         sudo apt install -y protobuf-compiler libprotobuf-dev
     - name: Build
       run: cargo build --verbose
