--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,18 +1,6 @@
-[package]
-name = "matching-engine"
-version = "0.1.0"
-edition = "2021"
-
-[dependencies]
-chrono = "0.4.31"
-prost = "0.12.1"
-prost-types = "0.12.1"
-tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }
-tonic = "0.10.2"
-
-[dependencies.uuid]
-version = "1.4.1"
-features = ["v4", "fast-rng", "macro-diagnostics"]
-
-[build-dependencies]
-tonic-build = "0.10.2"
+[workspace]
+members = [
+    "grpcserver",
+    "protos",
+    "repository","producer"
+]
